<resources>
    <string name="app_name">AppcentCase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news">News</string>
    <string name="favorites">Favorites</string>
    <string name="appcent_newsapp">Appcent NewsApp</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="articleImage">Article Image</string>
    <string name="news_source">News Source</string>
    <string name="articleimage">articleImage</string>
    <string name="no_favorites_yet">No favorites yet.</string>
    <string name="author_name">Author Name</string>
    <string name="_03_08_2020">03.08.2020</string>
    <string name="no_news_yet_nsearch_to_view">No news yet. \nSearch to view.</string>
    <string name="back_button">back button</string>
    <string name="favorites_button">favorites button</string>
    <string name="share_button">share button</string>
    <string name="article_image">Article image</string>
</resources>