<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.NewsDetailActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/favoritesBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_favorite_border_24"
            android:contentDescription="@string/favorites_button" />

        <ImageButton
            android:id="@+id/shareBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_ios_share_24"
            android:contentDescription="@string/share_button" />


        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            android:contentDescription="@string/back_button" />

    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/postDetailImg"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/article_image" />

        <TextView
            android:id="@+id/postDetailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            tools:text="test"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_outline_article_24" />

                <TextView
                    android:id="@+id/postDetailAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author_name" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_outline_calendar_month_24" />

                <TextView
                    android:id="@+id/postDetailDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_03_08_2020" />

            </LinearLayout>
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <TextView
                android:id="@+id/postDetailDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/postDetailNewsSourceBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="15dp"
            android:text="@string/news_source"
            android:textColor="@color/black" />

    </FrameLayout>

</LinearLayout>
