<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/listItemTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/listItemDescription"
        app:layout_constraintEnd_toStartOf="@+id/listItemImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/listItemDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="5dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:paddingTop="5dp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/listItemImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/listItemTitle" />

    <ImageView
        android:id="@+id/listItemImage"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginEnd="7dp"
        android:contentDescription="@string/articleimage"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <FrameLayout
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/listItemDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>